<resources>
    <string name="app_name">长江大学图书馆</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">长江大学图书馆</string>
    <string name="nav_header_subtitle">calis.yangtzeu.edu.cn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">用户登录</string>

    <string name="SavePath">A_Tool/Download/</string>
    <string name="Me_QQ">http://qm.qq.com/cgi-bin/qm/qr?k=KUnqv6xI3HOmKrgmxQNR5QSNpOAHRwaX</string>
    <string name="u_whystart981229_gmail_com_u"><![CDATA[whystart981229@gmail.com]]></string>
    <string name="u_1223414335_qq_com_u"><![CDATA[1223414335@qq.com]]></string>
    <string name="u_http_www_jianshu_com_u_f9a6ac792b1f_u"><![CDATA[http://www.jianshu.com/u/f9a6ac792b1f]]></string>
    <string name="u_https_github_com_xiaoyvyv_u"><![CDATA[https://github.com/xiaoyvyv]]></string>
    <string name="u_whysbelief_u"><![CDATA[微信：whysbelief]]></string>

    <!-- Strings related to login -->
    <string name="prompt_number">学号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">立即登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">邮箱不合法</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请输入内容</string>
    <string name="permission_rationale">提供电子邮件需要联系人权限</string>
    <string name="skip">跳过</string>
    <string name="login_background">登录背景</string>
    <string name="library_name">长江大学图书馆</string>
    <string name="app_author_web">m.xyll520.top</string>
    <string name="library_web">lib.yangtzeu.edu.cn</string>
    <string name="forget_psd">忘记密码</string>
    <string name="login_help">1.图书馆提供读者个性化的服务空间，默认已经开通读者空间服务，请输入读者证号和密码进入系统。\n\n2.初始密码为持卡人身份证号后六位，最后一位是X的，取X前六位数字</string>
    <string name="search_help">1.读者可以在此查询本馆的图书、期刊、古籍、多媒体等信息。检索 方式可以多个条件组配，并可实现区域图书馆群各分馆的书目联合检索。\n\n2. 字符中有空格系统自动分词，如需要检索包含空格的字符串，请前后加上双引号（半角），如： “Elements of Information Theory”。\n\n3.点“详细信息”后若无馆藏信息时为已订购还未到馆的图书。</string>
    <string name="trip">提示</string>
    <string name="loging">登录中</string>
    <string name="book_list">书单列表</string>
    <string name="my_book">我的书架</string>
    <string name="title_home">主页</string>
    <string name="title_tool">功能</string>
    <string name="title_me">我</string>
    <string name="search_list">检索收藏</string>
    <string name="private_label">私人标签</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="logout">退出登录</string>
    <string name="well_known_saying">书是人类进步的阶梯</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="hot_word">热门词</string>
    <string name="high_search">高级检索</string>
    <string name="book_kind">文献类型</string>
    <string name="book_where">分馆选择</string>
    <string name="lang_kind">语言种类</string>
    <string name="all">所有</string>
    <string name="image_book">图书</string>
    <string name="news">期刊</string>
    <string name="not_book">非书</string>
    <string name="old_book">古籍</string>
    <string name="toy">玩具</string>
    <string name="english">英语</string>
    <string name="chinese">中文</string>
    <string name="sort_choose">排序选项</string>
    <string name="sort_kind">排序方式</string>
    <string name="sort_time">出版时间</string>
    <string name="to">至</string>
    <string name="done">确定</string>
    <string name="lib_cd">长江大学图书馆</string>
    <string name="lib_gc">工程技术图书馆</string>
    <string name="lib_wl">文理学院图书馆</string>
    <string name="lib_lc">临床医学图书馆</string>
    <string name="lib_yx">院系资料图书馆</string>
    <string name="lib_xn">虚拟馆（无收藏）</string>
    <string name="lib_search"> 检索 </string>
    <string name="lib_notice"> 公告 </string>
    <string name="lib_news"> 新闻 </string>
    <string name="lib_learn"> 讲座 </string>
    <string name="new_notice">新消息</string>
    <string name="cant_open">此链接无法在浏览器中打开</string>
    <string name="cant_save">此链接无法收藏</string>
    <string name="cant_copy">此链接无法复制！</string>
    <string name="cant_refresh">此链接无法刷新！</string>
    <string name="wait_load_finish">请耐心等待加载完成！</string>
    <string name="baseweb_open">在浏览器中打开</string>
    <string name="baseweb_copy">复制此链接</string>
    <string name="baseweb_refresh">刷新</string>
    <string name="baseweb_code">查看网页源码</string>
    <string name="baseweb_close">关闭</string>
    <string name="collection">收藏</string>
    <string name="double_exit">再按一返回退键退出程序</string>
    <string name="no_open_app">未安装要跳转的App</string>
    <string name="open_app">即将跳转到App</string>
    <string name="is_open_app">是否安装要跳转的app:</string>
    <string name="save_local">保存位置：</string>
    <string name="bt_save">保存</string>
    <string name="is_save_image">是否保存图片？</string>
    <string name="web_details">网页详情</string>
    <string name="saving">文件保存中</string>
    <string name="save_error">文件保存失败！</string>
    <string name="cant_load_big_image">此页面无法加载大图！</string>
    <string name="click_image_zoom">点击网页图片即可加载大图</string>
    <string name="double_close_web">再按一次关闭网页</string>
    <string name="clear">取消</string>
    <string name="no_internet">没有网络连接</string>
    <string name="download_error">下载失败</string>
    <string name="menu">菜单</string>
    <string name="details">详情</string>
    <string name="from_local">来源:长江大学图书馆</string>
    <string name="pic_">封面图</string>
    <string name="lib_img">长大徽章</string>
    <string name="yangzteu_lib">长江大学图书馆</string>
    <string name="with_you">就在您的身边</string>
    <string name="why">小玉个人开发中心\nV1.0</string>
    <string name="no_more">没有更多啦</string>
    <string name="load_error">加载失败</string>
    <string name="jie_sao">内容简介</string>
    <string name="copy_right_link">链接已经复制到了剪切板</string>
    <string name="copy_right_isbn">ISBN已经复制到了剪切板</string>
    <string name="copy_right_book">索书号已经复制到了剪切板</string>
    <string name="page">页数：</string>
    <string name="more">更多</string>
    <string name="where_lib">所在馆</string>
    <string name="all_book">书库浏览</string>
    <string name="loading">加载中</string>
    <string name="load_finish">加载完成</string>
    <string name="onlyOutSaved">只输出有馆藏的记录</string>
    <string name="no_data">没有数据</string>
    <string name="remove_book">移除此书目？</string>
    <string name="jiu_mo">鸠摩文档搜索引擎</string>
    <string name="jiu_mo_des">全网文档、答案、小说、图书搜索引擎</string>
    <string name="my_history">借阅历史</string>
    <string name="save_book">收藏书目到书单？</string>
    <string name="view_history">浏览记录</string>
    <string name="sure_new_psd">请确认新密码</string>
    <string name="input_new_psd">请输入新密码</string>
    <string name="change_psd">修改密码</string>
    <string name="please_input_newPsd">请输入新密码</string>
    <string name="please_sure_newPsd">请确认新密码</string>
    <string name="do_newPsd_error">两次输入不一致</string>
    <string name="psd_too_short">请输入六位数以上的密码</string>
    <string name="score">总积分</string>
    <string name="user">用户</string>
    <string name="about">关于</string>
    <string name="share_text">拥有图书查找、图书续借、借阅历史、馆内新闻、文档搜索、电子书等诸多功能，等你来开启！</string>
    <string name="help">帮助</string>
    <string name="apply_redbag_code_key">c1x08894fliska9rxlrecb5</string>
    <string name="apply_me_key">FKX090017A88JZT5T39YB8</string>
    <string name="no_apply_app">未安装支付宝</string>
    <string name="app_rule">登录即代表同意《App服务条款》</string>
    <string name="exit">退出</string>
    <string name="skip_log">没有账户，跳过</string>
</resources>
