<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_psd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789*#"
            android:hint="@string/input_new_psd"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/do_new_psd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789"
            android:hint="@string/sure_new_psd"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/change_psd_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_psd" />

</LinearLayout>