<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:alpha="0.2"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:text="@string/why"
        android:layout_marginRight="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/lib_img" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:alpha="0.8"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:shadowColor="@color/black_20"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/yangzteu_lib"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:alpha="0.7"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:shadowColor="@color/black_20"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:text="@string/with_you"
                android:textColor="@color/black"
                android:textSize="16sp"/>


        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>